backend listo railway

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-DB_HOST=mysql.railway.internal
-DB_USER=root
-DB_PASSWORD=WHANWwSzvEMHpQYRgoMNvkiXuSRNBEIR
-DB_NAME=railway
-DB_PORT=3306
-PORT=4000
+MYSQLHOST=localhost
+MYSQLUSER=root
+MYSQLPASSWORD=root
+MYSQLDATABASE=agenda_app
+MYSQLPORT=3306
